# spacecadet

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  server.py  setup.sh  sitemap.xml
architecture/: index.html
development/: index.html
docs/: architecture.md  development.md  getting-started.md  index.md  task-ids.md  tools.md
emacs-config/: init.el
getting-started/: index.html
search/: search_index.json
task-ids/: index.html
tasks/: tasks.org
tests/: test_integration.py  test_path_validation.py
tools/: index.html
