[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spacecadet"
version = "0.1.0"
description = "MCP server for AI task management through Emacs org-mode"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]

[project.scripts]
spacecadet = "server:mcp.run"

[tool.pytest.ini_options]
testpaths = ["tests"]
